--- a/ol-config/dotnet/docs/ol-dry-run/.localization-config
+++ b/ol-config/dotnet/docs/ol-dry-run/.localization-config
@@ -103,9 +103,7 @@
      {
         "files":[ 
             "docs/csharp/**/*.md",
-            "docs/csharp/*.md",
-            "docs/visual-basic/**/*.md",
-            "docs/visual-basic/*.md"
+            "docs/visual-basic/**/*.md"
          ],
         "priorities":[
             {
