--- a/ol-config/dotnet/docs/ol-dry-run/.localization-config
+++ b/ol-config/dotnet/docs/ol-dry-run/.localization-config
@@ -65,14 +65,11 @@
             "docs/csharp/tour-of-csharp/*.md",
             "docs/csharp/tutorials/**/*.md",
             "docs/csharp/tutorials/*.md",
-            "docs/csharp/whats-new.md",
-            "docs/visual-basic/getting-started/**/*.md",
-            "docs/visual-basic/getting-started/*.md",
-            "docs/visual-basic/*.md"
+            "docs/csharp/whats-new.md"
       ],
         "priorities":[
             {
-               "priority":"Hi-HT",
+               "priority":"VBCS_Hi-HT",
                "locales":[ "de-de", "es-es", "fr-fr", "it-it", "ja-jp", "ko-kr", "ru-ru", "pt-br", "zh-cn", "zh-tw" ],
                "Type":"HT"
             }
@@ -90,11 +87,15 @@
             "docs/csharp/programming-guide/*.md",
             "docs/csharp/*.md",
             "docs/visual-basic/developing-apps/programming/**/*.md",
-            "docs/visual-basic/developing-apps/programming/*.md"
+            "docs/visual-basic/developing-apps/programming/*.md",
+            "docs/visual-basic/developing-apps/*.md",
+            "docs/visual-basic/getting-started/**/*.md",
+            "docs/visual-basic/getting-started/*.md",
+            "docs/visual-basic/*.md"      
         ],
         "priorities":[           
             {
-               "priority":"Med-HT",
+               "priority":"VBCS_Med-HT",
                "locales":[ "de-de", "es-es", "fr-fr", "it-it", "ja-jp", "ko-kr", "ru-ru", "pt-br", "zh-cn", "zh-tw" ],
                "Type":"HT"
             }
@@ -107,7 +108,7 @@
          ],
         "priorities":[
             {
-               "priority":"Lo-MT",
+               "priority":"VBCS_Lo-MT",
                "locales":[ "de-de", "es-es", "fr-fr", "it-it", "ja-jp", "ko-kr", "ru-ru", "pt-br", "zh-cn", "zh-tw" ],
                "Type":"MT"
             }
